# youtubot

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot/handlers/: users.py
redis/: redis.conf
youtubot/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
youtubot/bot/: llm.py
youtubot/bot/handlers/: users.py
youtubot/tests/: test_llm.py
